--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>MOQESM'2018</title>
+<title>Luc Jaulin</title>
 <!-- <!-- <meta charset="UTF-8"> --> -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="content-type" content="text/html; charset=WINDOWS-1252" >
@@ -11,7 +11,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Moqesm'2018</b>, Brest, 9 octobre 2018 </a>
+    <a href="#home" class="w3-bar-item w3-button"><b>Luc Jaulin</b>, Brest, 29 septembre 2021 </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#introduction" class="w3-bar-item w3-button">Introduction</a>
