--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Luc Jaulin</b>, Brest, 29 septembre 2021 </a>
+    <a href="#home" class="w3-bar-item w3-button"><b>Luc Jaulin</b>, Brest, 29 septembre 2022 </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#introduction" class="w3-bar-item w3-button">Introduction</a>
@@ -27,7 +27,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1200px;" id="home">
   <img class="w3-image" src="cordeliere_daurade.png" alt="Architecture" width="1300" >
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>MOQESM'2018</b>     </span> 
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>MOQESM2022</b>     </span> 
     <br>
     <span class="w3-hide-small w3-text-white">
     <strong>Rechercher, trouver et explorer des épaves sous-marines à l'aide de robots</strong>
@@ -99,7 +99,7 @@
   <div class="w3-container w3-padding-32" id="introduction">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Introduction</h3>
     <p>MOQESM est un des workshops satellites de la SeaTechWeek. Cette année, MOQESM se tiendra à Brest,
-     au Quartz, le 9 octobre 2018.  
+     au Quartz, le 9 octobre 2022.  
     </p>
   </div>
 
