--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Moqesm'2018</b>, Brest, 8-9-10 octobre 2018 </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#introduction" class="w3-bar-item w3-button">Introduction</a>
+      <a href="#introduction" class="w3-bar-item w3-button">Induction</a>
       <a href="#invite" class="w3-bar-item w3-button">Invité</a>
       <a href="#programme" class="w3-bar-item w3-button">Programme</a>
       <a href="#organisation" class="w3-bar-item w3-button">Organisation</a>
